chore: configure vite correctly

--- a/production.html
+++ b/production.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>JET Runtime Test</title>
-        <script src="dist/jet.js"></script>
+        <script src="dist/jet-framework.min.js"></script>
     </head>
     <body id="app">
         <button onclick="jet.update('message', 'Hello Jet Framework!')">
